cmake_minimum_required(VERSION 4.1)
project(Beakjoon)

set(CMAKE_CXX_STANDARD 17)

add_executable(Beakjoon Bronze/B5_2557.cpp
        Bronze/B5_1000.cpp
        Bronze/B5_1001.cpp
        Bronze/B5_10998.cpp
        Bronze/B5_1008.cpp
        Bronze/B5_10869.cpp
        Bronze/B5_10926.cpp
        Bronze/B5_18108.cpp
        Bronze/B5_10430.cpp
        Bronze/B5_2588.cpp
        Bronze/B5_11382.cpp
        Bronze/B5_10171.cpp
        Bronze/B5_10172.cpp)

add_executable(BJ Bronze/B5_10172.cpp)
